<resources>
    <string name="app_name">CityFleet</string>
    <string name="fontRegular">Montserrat-Regular.otf</string>
    <string name="fontLight">Montserrat-Light.otf</string>
    <string name="fontSemibold">Montserrat-SemiBold.otf</string>
    <string name="log_in">Log in</string>
    <string name="create_an_account">Create an account</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="networkMesMoInternet">No internet connection detected!</string>
    <string name="default_error_mes">Something went wrong</string>
    <string name="login_or_create_an_account_and_nenjoy_the_experience">Login or create an Account and\nenjoy the experience</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="enter_your_hack_license">Enter your hack license</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="hack_license">Hack License</string>
    <string name="email">Email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_confirm_password">Enter your confirm password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="phone_validation">Phone number is not valid</string>
    <string name="password_validation_mes">Password must be at least 8 characters long and contain at least one number</string>
    <string name="password_match_mes">Passwords don\'t match</string>
    <string name="license_error">Should be at least 6 characters long</string>
    <string name="report">Report</string>
    <string name="notification_settings">Notifications</string>
    <string name="notifications">News</string>
    <string name="dashboard">Dashboard</string>
    <string name="marketplace">Marketplace</string>
    <string name="report_title">Report</string>
    <string name="police">Police</string>
    <string name="tlc">TLC</string>
    <string name="accident">Accident</string>
    <string name="trafic_jam">Traffic jam</string>
    <string name="hazard">Hazard</string>
    <string name="road_closure">Road closure</string>
    <string name="add_friend_lbl">Add friend to simplify\nconnecting and meeting up!\nsee other\'s ETA when heading\nto the same direction,\nand appear on the map when\ndriving nearby</string>
    <string name="find_friends_from_contacts">Find friends from contacts</string>
    <string name="social_media_connections">Social Media Connections</string>
    <string name="facebook_friend">Facebook Friend</string>
    <string name="instagram_friends">Instagram Friends</string>
    <string name="twitter_friends">Twitter Friends</string>
    <string name="add_friends_title">Add Friends</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="posting">Posting</string>
    <string name="earnings">Earnings</string>
    <string name="invite_a_driver">Invite a driver</string>
    <string name="chat">Chat</string>
    <string name="benefits">Benefits</string>
    <string name="legal_aid">Services</string>
    <string name="help">Help</string>
    <string name="setting">Setting</string>
    <string name="sign_out">Sign out</string>
    <string name="pick_profile_image_title">Choose profile image</string>
    <string name="pick_image_title">Choose image</string>
    <string name="instagram_url">https://api.instagram.com/oauth/authorize/?</string>
    <string name="instagram_url_get_token">https://api.instagram.com/oauth/access_token</string>
    <string name="rating">(%1$d)</string>
    <string name="bio">Bio</string>
    <string name="drives">Drives</string>
    <string name="documents">Documents</string>
    <string name="job_compl">Job completed</string>
    <string name="cars_for_rent_sale">Cars for rent/sale</string>
    <string name="general_goods_for_sale">General goods for sale</string>
    <string name="job_offers">Job Offers</string>
    <string name="job_offer">Job Offer</string>
    <string name="present_barcode_to_be_n_scanned_at_register">Present barcode to be\nscanned at register</string>
    <string name="display">Display</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="status_visible_invisible">Status Visible/Invisible</string>
    <string name="chat_privacy">Chat Privacy</string>
    <string name="help_faq">Help/FAQ</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="tos">Terms and Conditions</string>
    <string name="token_header">"Token "</string>
    <string name="current_password">Current Password</string>
    <string name="current_password_hint">Enter your current password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_hint">Enter your new password</string>
    <string name="gallery_title">%1$d of %2$d</string>
    <string name="delete_dialog_title">Delete image</string>
    <string name="delete_dialog_message">Are you sure you want to delete this image?</string>
    <string name="dmv_lawyers">DMV Lawyers</string>
    <string name="tlc_lawyers">TLC Lawyers</string>
    <string name="accountants">Accountants</string>
    <string name="insurance_brokers">Insurance Brokers</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="years_of_experience">Years of experience</string>
    <string name="enter_years_of_experience">Enter Years of experience</string>
    <string name="rating_lbl">Rating</string>
    <string name="lawyer_s_info">Lawyer\'s info</string>
    <string name="accountants_info">Accountant\'s info</string>
    <string name="insurance_brokers_info">Insurance broker\'s info</string>
    <string name="location">Location</string>
    <string name="select_location">Select Location</string>
    <string name="lawyer">Lawyer</string>
    <string name="accountant">Accountant</string>
    <string name="broker">Broker</string>
    <string name="select_person">Select %1$s</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="contact_person">Contact %1$s</string>
    <string name="other_location">Please select other location</string>
    <string name="documents_true">All up to date</string>
    <string name="documents_false">Not up to date</string>
    <string name="all">All</string>
    <string name="unread">Unread</string>
    <string name="vechicles_for_rent_sale">Vehicles for Rent/Sale</string>
    <string name="general_goods">General Goods</string>
    <string name="manage_previous_posts">Manage Previous Posts</string>
    <string name="post">Post</string>
    <string name="rent">Rent</string>
    <string name="sale">Sale</string>
    <string name="make">Make</string>
    <string name="select_make">Select Make</string>
    <string name="model">Model</string>
    <string name="select_model">Select Model</string>
    <string name="type">Type</string>
    <string name="select_type">Select Type</string>
    <string name="color">Color</string>
    <string name="select_color">Select Color</string>
    <string name="year">Year</string>
    <string name="select_year">Select Year</string>
    <string name="fuel">Fuel</string>
    <string name="select_fuel">Select Fuel</string>
    <string name="seats">Seats</string>
    <string name="select_seats">Select Seats</string>
    <string name="select_price">Select Price</string>
    <string name="price">Price</string>
    <string name="contact_details">Contact Details</string>
    <string name="provide_description">Provide Contact Details</string>
    <string name="item">Item</string>
    <string name="enter_item">Enter Item</string>
    <string name="asking_price">Asking Price</string>
    <string name="enter_asking_price">Enter Asking Price</string>
    <string name="condition">Condition</string>
    <string name="select_condition">Select Condition</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="time">Time</string>
    <string name="select_time">Select Time</string>
    <string name="pickup_address">Pickup Address</string>
    <string name="enter_pickup_address">Enter Pickup Address</string>
    <string name="destination">Destination</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="fare">Fare</string>
    <string name="enter_fare">Enter Fare</string>
    <string name="gratuity">Gratuity</string>
    <string name="enter_gratuity">Enter Gratuity</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="select_vehicle_type">Select Vehicle Type</string>
    <string name="suite_tie">Suite/Tie</string>
    <string name="select_suite_tie">Select Suite/Tie</string>
    <string name="exp_date">Exp Date</string>
    <string name="save">Save</string>
    <string name="doc_management">DOC Management</string>
    <string name="dmv_licenese">DMV License</string>
    <string name="insurance">Insurance</string>
    <string name="diamond_card">Diamond Card</string>
    <string name="insurance_certificate">Insurance certificate</string>
    <string name="tlc_plate_number">TLC Plate Number</string>
    <string name="drug_test">Drug Test</string>
    <string name="certificate_of_liability">Certificate Of Liability</string>
    <string name="plate_number">Plate #</string>
    <string name="select_image_empty">Please select image</string>
    <string name="plate_number_empty">Please enter Plate Number</string>
    <string name="ext_date_empty">Please enter expiration date</string>
    <string name="ext_date_not_valid">Please enter valid expiration date</string>
    <string name="enter_all_fields">Please enter all fields</string>
    <string name="details">Details</string>
    <string name="drop_off_address">Drop Off Address</string>
    <string name="your_pay">Your Pay</string>
    <string name="tolls">Tolls</string>
    <string name="company_personal">Company/Personal</string>
    <string name="job_type">Job Type</string>
    <string name="request_job">Request job</string>
    <string name="posting_empty">Fill all the fields!</string>
    <string name="one_image">Post need to have at least 1 image</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="reset_password_hint">Please enter your email address and\nwe\'ll send you an email to reset your\npassword.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="time_price">%1$s | $%2$s</string>
    <string name="dollar_price">$%1$s</string>
    <string name="job_info">Job Info</string>
    <string name="rent_sale_transition_name">carImagePagerTransitionName</string>
    <string name="general_goods_transition_name">generalGoodTransionName</string>
    <string name="job_date">%1$d/%2$d/%3$d</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="jobs_available">%1$d Jobs Available</string>
    <string name="select_job_type">Select Job Type</string>
    <string name="instructions">Instructions</string>
    <string name="enter_instructions">Enter Instructions</string>
    <string name="car_posting_image_name">car_posting</string>
    <string name="general_good_posting_name">general_good_posting</string>
    <string name="car_profile">car_profile</string>
    <string name="enter_something_about_yourself">Enter Something About Yourself</string>
</resources>