<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/reg_edittext_padding">

                <TextView
                    style="@style/RegistrationEdittextLabelStyle"
                    android:drawableLeft="@drawable/user"
                    android:text="@string/full_name"/>

                <EditText
                    android:id="@+id/fullNameEt"
                    style="@style/RegistrationEdittextStyle"
                    android:hint="@string/enter_your_full_name"
                    android:inputType="text"
                    android:nextFocusDown="@+id/usernameEt"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lineColor"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/reg_edittext_padding">

                <TextView
                    style="@style/RegistrationEdittextLabelStyle"
                    android:drawableLeft="@drawable/user"
                    android:text="@string/username"/>

                <EditText
                    android:id="@+id/usernameEt"
                    style="@style/RegistrationEdittextStyle"
                    android:hint="@string/enter_your_username"
                    android:inputType="text"
                    android:nextFocusDown="@+id/phoneEt"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lineColor"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/reg_edittext_padding">

                <TextView
                    style="@style/RegistrationEdittextLabelStyle"
                    android:drawableLeft="@drawable/call"
                    android:text="Phone"/>

                <EditText
                    android:id="@+id/phoneEt"
                    style="@style/RegistrationEdittextStyle"
                    android:hint="@string/enter_your_phone"
                    android:inputType="phone"
                    android:nextFocusDown="@+id/hackLicenseEt"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lineColor"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/reg_edittext_padding">

                <TextView
                    style="@style/RegistrationEdittextLabelStyle"
                    android:drawableLeft="@drawable/sertificate"
                    android:text="@string/hack_license"/>

                <EditText
                    android:id="@+id/hackLicenseEt"
                    style="@style/RegistrationEdittextStyle"
                    android:hint="@string/enter_your_hack_license"
                    android:inputType="number"
                    android:nextFocusDown="@+id/email"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lineColor"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/reg_edittext_padding">

                <TextView
                    style="@style/RegistrationEdittextLabelStyle"
                    android:drawableLeft="@drawable/envelope"
                    android:text="@string/email"/>

                <EditText
                    android:id="@+id/emailEt"
                    style="@style/RegistrationEdittextStyle"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@+id/password"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lineColor"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/reg_edittext_padding">

                <TextView
                    style="@style/RegistrationEdittextLabelStyle"
                    android:drawableLeft="@drawable/lock"
                    android:text="@string/password"/>

                <EditText
                    android:id="@+id/passwordEt"
                    style="@style/RegistrationEdittextStyle"
                    android:hint="@string/enter_your_password"
                    android:inputType="text"
                    android:nextFocusDown="@+id/confirmPasswordEt"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lineColor"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/reg_edittext_padding">

                <TextView
                    style="@style/RegistrationEdittextLabelStyle"
                    android:drawableLeft="@drawable/lock"
                    android:text="@string/confirm_password"/>

                <EditText
                    android:id="@+id/confirmPasswordEt"
                    style="@style/RegistrationEdittextStyle"
                    android:hint="@string/enter_your_confirm_password"
                    android:inputType="text"
                    android:nextFocusDown="@+id/signupBtn"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lineColor"/>

            <Button
                android:id="@+id/signupBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_marginLeft="@dimen/splash_btn_margin_small"
                android:layout_marginRight="@dimen/splash_btn_margin_small"
                android:layout_marginTop="@dimen/reg_edittext_padding"
                android:layout_marginBottom="@dimen/reg_edittext_padding"
                android:background="@drawable/red_btn_selector"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>